styles.css
/*
 * I add this to html files generated with pandoc.
 */
/* 
 :root {
  --fg: 
 } */

html {
  font-size: 100%;
  overflow-y: scroll;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
}

* {
  box-sizing: border-box;
  margin: 0;
}

body {
  font-family: Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif;
  color: #444;
  background: #fefefe;
  
  /* in 2023 we prefer not to prescribe a font size afaik */
  /* font-size: 16px; */
  line-height: 1.5;
}

header, main, footer {
  padding: clamp(1rem, 2vmin, 3rem);
}

main {
  margin: auto;
  max-width: 42em;
  margin-top: 1em;
}

a {
  color: #06e;
  text-decoration: none;
  text-decoration: underline;
}

a:visited {
  color: #0b0080;
}

a:hover {
  color: #06e;
}

a:active {
  color: #faa700;
}

a:focus {
  outline: thin dotted;
}

*::-moz-selection {
  background: rgba(255, 255, 0, 0.3);
  color: #000;
}

*::selection {
  background: rgba(255, 255, 0, 0.3);
  color: #000;
}

a::-moz-selection {
  background: rgba(255, 255, 0, 0.3);
  color: #0645ad;
}

a::selection {
  background: rgba(255, 255, 0, 0.3);
  color: #0645ad;
}

p {
  margin: 1em 0;
}

img {
  max-width: 100%;
}

.avatar {
  width: 200px;
  height: 200px;
  object-fit: cover;
  object-position: top;
  margin: .5em;
  border-radius: 50%;
}

h1, h2, h3, h4, h5, h6 {
  color: #111;
  line-height: 125%;
  margin-top: 2em;
  font-weight: normal;
}

h4, h5, h6 {
  font-weight: bold;
}

h1 {
  margin-top: .25em;
  font-size: 2.5em;
  margin-bottom: 1.5em;
}

.title {
  margin-top: 0;
}

h2 {
  font-size: 2em;
}

h3 {
  font-size: 1.5em;
}

h4 {
  font-size: 1.2em;
}

h5 {
  font-size: 1em;
}

h6 {
  font-size: 0.9em;
}

blockquote {
  color: #666666;
  margin: 0;
  padding-left: 3em;
  border-left: 0.5em #EEE solid;
}

hr {
  display: block;
  height: 2px;
  border: 0;
  border-top: 1px solid #aaa;
  border-bottom: 1px solid #eee;
  margin: 1em 0;
  padding: 0;
}

pre, code, kbd, samp {
  color: black;
  font-family: monospace, monospace;
  _font-family: 'courier new', monospace;
}

pre {
  white-space: pre;
  white-space: pre-wrap;
  word-wrap: break-word;
}

b, strong {
  font-weight: bold;
}

dfn {
  font-style: italic;
}

ins {
  background: #ff9;
  color: #000;
  text-decoration: none;
}

mark {
  background: #ff0;
  color: #000;
  font-style: italic;
  font-weight: bold;
}

sub, sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sup {
  top: -0.5em;
}

sub {
  bottom: -0.25em;
}

ul, ol {
  margin: 1em 0;
  padding: 0 0 0 2em;
}

li p:last-child {
  margin-bottom: 0;
}

ul ul, ol ol {
  margin: .3em 0;
}

dl {
  margin-bottom: 1em;
}

dt {
  font-weight: bold;
  margin-bottom: .8em;
}

dd {
  margin: 0 0 .8em 2em;
}

dd:last-child {
  margin-bottom: 0;
}

img {
  border: 0;
  -ms-interpolation-mode: bicubic;
  vertical-align: middle;
}

figure {
  display: block;
  text-align: center;
}

figure img {
  border: none;
  margin: 0 auto;
}

figcaption {
  font-size: 0.8em;
  font-style: italic;
  margin: 0 0 .8em;
}

table {
  margin-bottom: 2em;
  border-bottom: 1px solid #ddd;
  border-right: 1px solid #ddd;
  border-spacing: 0;
  border-collapse: collapse;
}

table th {
  padding: .2em 1em;
  background-color: #eee;
  border-top: 1px solid #ddd;
  border-left: 1px solid #ddd;
}

table td {
  padding: .2em 1em;
  border-top: 1px solid #ddd;
  border-left: 1px solid #ddd;
  vertical-align: top;
}

.author {
  font-size: 1.2em;
  text-align: center;
}


/* remove underlines for footnotes */

a.footnote-ref {
  text-decoration: none;
}



/* Ludwig suggestion: no underline, supercript, [brackets] */

a.footnote-ref {
  margin-inline-start: 0.125em;
  text-decoration: none;
  /* doesn't make a visible difference in current font, "Georgia", but would make a difference in other fonts */
  font-variant-numeric: tabular-nums;
}

.footnote-ref sup {
  font-size: 85%;
}

.footnote-ref sup::before {
  content: "[";
}

.footnote-ref sup::after {
  content: "]";
}


/* misc styling (opinionated I guess) */

span.citation {
  margin-inline-start: .25em;
}

#refs, #organizer-list {
  margin-top: 1rem;
}

#refs :target {
  padding-left: .5em;
  border-left: 3px solid #faa700;
  text-indent: 0; /* undo hanging indent */
  /* font-weight: bold; */
}

/* #organizer-list */

#organizer-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
  gap: 1rem;
}

#organizer-list figure,
#organizer-list figcaption {
  display: flex;
  flex-flow: column;
  align-items: center;
}

#organizer-list figcaption {
  font-style: inherit;
  height: 100%;
}

#organizer-list p {
  margin: 0.5em 0;
}

#organizer-list .title::after {
  content: ", ";
}

#organizer-list .name {
  font-weight: bold;
  font-size: 1.0625em;
}

#organizer-list .email {
  margin-top: auto;
  font-family: monospace;
  font-style: normal;
  text-decoration: none;
}

#organizer-list .contact {
  font-family: monospace;
  display: flex;
  gap: .25em;
}

#organizer-list .contact > * {
  /* background-color: #06e; */
  /* color: #eee; */
  padding: .25em .5em;
  text-decoration: none;
  border-radius: 2px;
  white-space: nowrap;
}
#organizer-list .blurb {
  display: none;
}

#organizer-list .avatar {
  width: 120px;
  height: 120px;
  object-fit: cover;
  object-position: top;
  margin: .5em;
  border-radius: 50%;
}

/* header */

header, footer {
  /* border-bottom: 1px solid #888; */
  background-color: #dfdfdf;
  display: flex;
}
header a {
  text-decoration: none;
}
header nav {
  margin-left: auto;
  display: flex;
  gap: 1rem;
}

/* footer */
footer {
  margin-top: 4rem;
  font-size: .8em;
}

footer > * {
  margin: 0;
  opacity: .5;
}

.colophon {
  margin-left: auto;
}

/* References */

.csl-entry {
  margin-bottom: 1rem;;
}


/* Dark Mode adjustments */

@media only screen and (prefers-color-scheme: dark) {
  body   { background:  #000; color: #ccc; }
  h1, h2, h3, h4, h5, h6 { color: #aaa}
  a { color: rgb(10, 132, 255) }
  a:visited { color: rgb(132, 112, 255) }
  pre, code, kbd, samp { color: inherit; }
  header, footer { background-color: #111; }
}


/* Print styles */

@media print {
  * {
    background: transparent !important;
    color: black !important;
    filter: none !important;
    -ms-filter: none !important;
  }

  body {
    font-size: 12pt;
    max-width: 100%;
  }

  a, a:visited {
    text-decoration: underline;
  }

  hr {
    height: 1px;
    border: 0;
    border-bottom: 1px solid black;
  }

  a[href]:after {
    content: " (" attr(href) ")";
  }

  abbr[title]:after {
    content: " (" attr(title) ")";
  }

  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after {
    content: "";
  }

  pre, blockquote {
    border: 1px solid #999;
    padding-right: 1em;
    page-break-inside: avoid;
  }

  tr, img {
    page-break-inside: avoid;
  }

  img {
    max-width: 100% !important;
  }

  @page :left {
    margin: 15mm 20mm 15mm 10mm;
}

  @page :right {
    margin: 15mm 10mm 15mm 20mm;
}

  p, h2, h3 {
    orphans: 3;
    widows: 3;
  }

  h2, h3 {
    page-break-after: avoid;
  }
}

